cLox/grammarrules.txt
LOX GRAMMAR RULES


PRECEDENCE(INTERPRETER) RULES
program -> declaration* EOF;
declaration -> classDecl | funDecl | varDecl | statement;
statement -> exprStmt | printStmt | forStmt | ifStmt | returnStmt | whileStmt | switchStmt | block;

expression -> assignment;
assignment -> (call ".")? IDENTIFIER '=' assignment | logic_or;
logic_or -> logic_and ("or" logic_and)*;
logic_and -> equality ("and" equality)*;
equality -> comparison (('!=' | '==') comparison)*;
comparison -> term (('>=' | '<=' | '>' | '<') term)*;
term -> factor (('+' | '-') factor)*;
factor -> unary (('/' | '*') unary)*;
unary -> ('!' | '-') unary | call;
call -> primary ( '(' arguments? ')' | "." IDENTIFIER )*;
primary -> NUMBER | STRING | "true" | "false" | "nil" | "(" expression ")" | IDENTIFIER | 'fun' '(' parameters? ')' block | "super" "." IDENTIFIER;

arguments -> expression (','expression)*;


STATEMENT RULES
varDecl -> "var" IDENTIFIER ("=" expression)? ";";
classDecl -> "class" IDENTIFIER ( "<" IDENTIFIER )? "{" function* "}";
funDecl -> "fun" function;
printStmt -> "print" expression ";";
exprStmt -> expression ";";
forStmt -> "for" '(' (varDecl | exprStmt | ";") expression? ";" expression? ")" statement;
ifStmt -> "if" '(' expression ')' statement (else statement)?;
returnStmt -> "return" expression? ";";
whileStmt -> "while" '(' expression ')' statement;
switchStmt -> "switch" '(' expression ')' '{' switchCase* defaultCase? '}' ;
block -> '{' declaration* '}';

function -> IDENTIFIER ('(' parameters? ')' block | block );
parameters -> IDENTIFIER ( ',' IDENTIFIER )*;
switchCase -> "case" expression ':' statement*;
defaultCase -> "default" ':' statement*;

EXPRESSION RULES
expression -> literal | binary | grouping | unary;
literal -> NUMBER | STRING | "true" | "false" | "nil";
grouping -> "(" expression ")";
unary -> ( "-" | "!" ) expression;
binary -> expression operator expression;
operator -> "==" | "!=" | "<" | ">" | "<=" | ">=" | "+" | "-" | "/" | "*";
